--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -11,12 +11,12 @@
             <form  #usercreate = "ngForm" (ngSubmit) = "createUser(usercreate.value)">
             
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="name" placeholder="Full Name" name="userid" ngModel>
+                    <input type="text" class="form-control" id="name" placeholder="Full Name" name="username" ngModel>
                     <label for="username" class="form-label">Full Name</label>
                 </div>
 
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="id" placeholder="User ID" name="username" ngModel>
+                    <input type="text" class="form-control" id="id" placeholder="User ID" name="userid" ngModel>
                     <label for="userid" class="form-label">User ID</label>
                 </div>
 
