--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -15,6 +15,10 @@
             <th scope="row">Email</th>
             <td>{{userdata.email}}</td>
         </tr>
+        <tr>
+            <th scope="row">DOB</th>
+            <td>{{userdata.DOB}}</td>
+        </tr>
     </table>
 
     <button (click)="editprofile=!editprofile" class="btn btn-outline-danger" style="margin: 10px;">Edit Details</button>
@@ -32,7 +36,7 @@
                 <label for="email" class="form-label">Email</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="date" class="form-control" id="dob" placeholder="DOB" name="dob" ngModel>
+                <input type="date" class="form-control" id="dob" placeholder="DOB" name="DOB" ngModel>
                 <label for="dob" class="form-label">Date of Birth</label>
             </div>
             <div class="form-floating mb-3">
