--- a/src/app/components/create-course/create-course.component.html
+++ b/src/app/components/create-course/create-course.component.html
@@ -2,19 +2,33 @@
 
 <div style="margin: 40px;">
 
-    <form action="{{server_url}}/create/course" method="post" target="/co">
+    <form #createForm="ngForm" (ngSubmit)="createcourse(createForm.value)">
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="createCourseCode" placeholder="AA101">
+            <input type="text" class="form-control" id="createCourseCode" placeholder="AA101" name="code" ngModel>
             <label for="createCourseCode" class="form-label">Course code</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="createCourseName" placeholder="Name of the course">
+            <input type="text" class="form-control" id="createCourseName" placeholder="Name of the course" name="name" ngModel>
             <label for="createCourseName" class="form-label">Course name</label>
         </div>
         <div class="form-floating mb-3">
-            <textarea class="form-control" id="createCourseDesc" rows="3" placeholder="Description of the course"></textarea>
+            <textarea class="form-control" id="createCourseDesc" rows="3" placeholder="Description of the course" name="desc" ngModel></textarea>
             <label for="createCourseDesc" class="form-label">Course description</label>
         </div>
+
+        <table #table>
+            <tr><th>Instructors:</th><th>Students:</th></tr>
+            <tr *ngFor="let user of users" id="row_{{user.userID}}">
+                <td id="ins_{{user.userID}}">
+                    <label for="{{user.userID}}">{{user.userID}}</label>
+                    <input type="checkbox"  (change)="logical($event)" name="i{{user.userID}}" ngModel>
+                </td>
+                <td id="stu_{{user.userID}}">
+                    <label for="{{user.userID}}">{{user.userID}}</label>
+                    <input type="checkbox"  (change)="logical($event)" name="s{{user.userID}}" ngModel>
+                </td>
+            </tr>
+        </table>
         <input class="btn btn-outline-success" type="submit" value="Submit">
     </form>
 
