--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div style="margin: 20px;">
-    <h3>Hello, {{userid}}!</h3>
+    <h3>Hello, {{userdata.username}}!</h3>
     <hr/>
     <h4>Courses you attend:</h4>
     <app-course [isprof]="false" [courses]="studentCourses"></app-course>
