file up/dw errors fixed

--- a/src/app/pages/assignment/assignment.component.html
+++ b/src/app/pages/assignment/assignment.component.html
@@ -19,7 +19,7 @@
     <h4>Your Submission: </h4>
     <hr/>
     <b>Files:</b> <br>
-    <a href="{{file.url}}"  download>{{file.name}}</a><br>
+    <a href="{{file.url}}" target="_blank">{{file.name}}</a><br>
     <hr/>
     <p><b>Submitted at</b>: <time>{{submissiondata.time}}</time></p>
     <hr/>
