--- a/src/app/components/uploader/uploader.component.html
+++ b/src/app/components/uploader/uploader.component.html
@@ -1,4 +1,12 @@
-<button class="btn btn-outline-dark"><i class="bi bi-upload"></i> Files</button>
-<!-- add ngx chips here -->
+<button class="btn btn-outline-dark" (click)="dialogueBox()"><i class="bi bi-upload"></i> Files</button>
+<mat-chip-list>
+    <mat-chip *ngFor="let file of files" [removable]="true" (removed)="removeFile(file.name)">
+        {{file.name}}
+        <button matChipRemove>x
+            <!-- <mat-icon>cancel</mat-icon> -->
+          </button>
+    </mat-chip>
+
+</mat-chip-list>
 <div></div>
-<input type="file" multiple="multiple" (change)="updateFiles($event)" style="visibility: hidden;">
+<input type="file" multiple="multiple" (change)="updateFiles($event)" style="visibility: hidden;" #dboxer>
