--- a/src/app/pages/profcourse/profcourse.component.html
+++ b/src/app/pages/profcourse/profcourse.component.html
@@ -38,6 +38,7 @@
         </div>
         <div class="form-floating">
             <p #fileName>
+                <uploader (sendfiles)="collectFiles($event)"></uploader>
             <button class="btn btn-outline-info margined" (click)="triggerFileChooser()">Upload files</button>
             </p>
         </div>
@@ -77,7 +78,7 @@
     <hr/>
 
     <!-- <div style="width: 50%;border:1px solid green; padding:10px;"> -->
-
+        
     <h3>Posts <i class="bi bi-megaphone-fill" style="font-size: 2rem;"></i></h3>
     <div *ngFor="let post of posts">
         <div class="container" style="margin: 30px;">
