post comments front end

--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -5,4 +5,8 @@
     <hr/>
     <p><b>Release Date</b>: {{data.releaseDate}}</p>
     <hr/>
+    <b>Discussion</b>:
+    <div>
+    <app-commentstack [comments]="data.comments"></app-commentstack>    
+    </div>
 </div>
