--- a/src/app/components/course-post/course-post.component.html
+++ b/src/app/components/course-post/course-post.component.html
@@ -2,6 +2,7 @@
 <h3>{{post.title}}</h3>
 <!-- <h4><small class="text-muted">By ... at ...</small></h4> -->
 <p>{{post.instruction}}</p>
+<app-commentstack [comments]="post.comments"></app-commentstack>
 <!-- <ul *ngFor="let filename of filenames">
     <li>
         {{filename}}
