--- a/src/app/pages/profcourse/profcourse.component.html
+++ b/src/app/pages/profcourse/profcourse.component.html
@@ -1,11 +1,13 @@
 <div class="container">
-
-    <div class="btn-group-vertical" style="margin: 20px; margin-left: 0px;">
-        <a class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;" (click)="makingPost=true;makingAssignment=false;makingAssessment=false;">+ Create Post</a>
-        <a class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;" (click)="makingPost=false;makingAssignment=true;makingAssessment=false;">+ Create Assignment</a>
-        <a class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;" (click)="makingPost=false;makingAssignment=false;makingAssessment=true;">+ Create Assessment</a>
-        <a class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;">+ Add Instructors</a>
-        <a class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;">+ Add Students</a>
+<!-- 4->prof only -->
+<!-- 3, 2, 1 -->
+    <div *ngIf="accesslevel>1" class="btn-group-vertical" style="margin: 20px; margin-left: 0px;">
+        <a *ngIf="accesslevel>1" class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;" (click)="makingPost=true;makingAssignment=false;makingAssessment=false;">+ Create Post</a>
+        <a *ngIf="accesslevel>2" class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;" (click)="makingPost=false;makingAssignment=true;makingAssessment=false;">+ Create Assignment</a>
+        <a *ngIf="accesslevel>2" class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;" (click)="makingPost=false;makingAssignment=false;makingAssessment=true;">+ Create Assessment</a>
+        <a *ngIf="accesslevel>2" class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;">+ Add Students</a>
+        <a *ngIf="accesslevel>2" class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;">+ Add Wizards</a>
+        <a *ngIf="accesslevel>3" class="btn btn-outline-primary text-left" style="text-align: left; padding: 15px;">+ Add Instructors</a>
     </div>
 
 
