--- a/src/app/pages/members/members.component.html
+++ b/src/app/pages/members/members.component.html
@@ -3,4 +3,4 @@
     <mat-tab label="Second">Content 2</mat-tab>
     <mat-tab label="Third">Content 3</mat-tab>
 </mat-tab-group> -->
-<app-membertable [members]="members['students']" [memberids]="getKeys(members['students'])" [title]="'Students'" [level]="accesslevel"></app-membertable>
+<app-membertable (sendlist)="sendEditedList($event)" [members]="members['students']" [memberids]="getKeys(members['students'])" [title]="'Students'" [level]="accesslevel"></app-membertable>
