--- a/src/app/components/membertable/membertable.component.html
+++ b/src/app/components/membertable/membertable.component.html
@@ -2,30 +2,39 @@
 <h5>{{title}}
     <button *ngIf="!editing" (click)="editing=true">Edit</button>
     <button *ngIf="editing" (click)="editing=false;sendList()">Save</button>
-    <button >Download</button>
+    <button (click)="downloadList()">Download</button>
 
 </h5>
-Add students by file:     <uploader (sendfiles)="collectFiles($event)" #uploader></uploader>
-<table>
+<div *ngIf="editing">
+<!-- Add students by file:<uploader (sendfiles)="collectFiles($event)" #uploader></uploader><br> -->
+Add {{title}}: <input type="text" placeholder="User ID1, User ID2, ..." #newmembers><button (click)="addMembers()">Add</button>
+</div>
+<table #table>
     <tr>
         <th>User ID</th>
-        <div *ngIf="title=='Students'">
-            <th>Grade</th>
-            <th>Submissions</th>
-        </div>
-        <div *ngIf="title=='Wizards'">
-            <th>Access Level</th>
-        </div>
+        <!-- <div > -->
+            <th *ngIf="title=='Students'">Grade</th>
+            <th *ngIf="title=='Students'">Submissions</th>
+        <!-- </div> -->
+        <!-- <div *ngIf="title=='Wizards'"> -->
+            <th *ngIf="title=='Wizards'">Access Level</th>
+        <!-- </div> -->
     </tr>
     <tr *ngFor="let memberid of memberids" style="border: 3px solid black;">
         <td>{{memberid}}</td>
-        <div *ngIf="title=='Students'">
-            <td>grade data</td>
-            <td>submissiondata</td>
-        </div>
-        <div *ngIf="title=='Wizards'">
-            <td>leveldata</td>
-        </div>
+        <!-- <div> -->
+            <td *ngIf="title=='Students'">grade data</td>
+            <td *ngIf="title=='Students'">submissiondata</td>
+        <!-- </div> -->
+        <!-- <div> -->
+            <td *ngIf="title=='Wizards'">
+                {{getLevelbyId(memberid)}}
+                <div *ngIf="editing">
+                <button (click)="changeLevelbyId(memberid,+1)"><i class="bi bi-arrow-up" style="font-size: xx-small;"></i></button>
+                <button (click)="changeLevelbyId(memberid,-1)"><i class="bi bi-arrow-down" style="font-size:xx-small"></i></button>
+                </div>
+            </td>
+        <!-- </div> -->
         <td>
             <button *ngIf="editing" (click)="remove(memberid)">x</button>
         </td>
