--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -2,18 +2,18 @@
     <table>
         <tr>
             <td>
-                <p style="margin: 0;padding: 0;">{{data.username}}:</p>
+                <p style="margin: 0;padding: 0;">{{data.author}}:</p>
             </td>
             <td colspan="2">
-                {{data.content}}
+                {{data.text}}
             </td>
         </tr>
         <tr>
             <td>
-            <p style="margin: 0;padding: 0;font-size: x-small;display: inline;">{{data.datetime}}</p>
+            <p style="margin: 0;padding: 0;font-size: x-small;display: inline;">{{data.datemade}}</p>
             </td>
         </tr>
 
 </table>
-<app-commentstack [comments]="data.replies" [level]="level+1"></app-commentstack>
+<app-commentstack [comments]="data.replies" [id]="data.id" [level]="level+1"></app-commentstack>
 </div>
