--- a/src/app/components/course-post/course-post.component.html
+++ b/src/app/components/course-post/course-post.component.html
@@ -2,9 +2,4 @@
 <h3>{{post.title}}</h3>
 <!-- <h4><small class="text-muted">By ... at ...</small></h4> -->
 <p>{{post.instruction}}</p>
-<app-commentstack [comments]="post.comments"></app-commentstack>
-<!-- <ul *ngFor="let filename of filenames">
-    <li>
-        {{filename}}
-    </li>
-</ul> -->
+<app-commentstack [comments]="post.comments" [id]="-1" [postNum]="post.number"></app-commentstack>
