--- a/src/app/pages/assignment/assignment.component.html
+++ b/src/app/pages/assignment/assignment.component.html
@@ -8,9 +8,9 @@
     <downloader [url]="taskdata.files.url" [filename]="taskdata.files.name"></downloader>
     <hr/>
     </div>
-    <p>Release Date: {{taskdata.releaseDate}}</p>
+    <p>Released on: {{taskdata.releaseDate}}, {{taskdata.releaseTime}}</p>
     <hr/>
-    <p>Due Date: {{taskdata.dueDate}}</p>
+    <p>Due by: {{taskdata.dueDate}}, {{taskdata.dueTime}}</p>
     <hr/>
 </div>
 
