--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -7,6 +7,6 @@
     <hr/>
     <b>Discussion</b>:
     <div>
-    <app-commentstack [parentID]="data.id" [comments]="data.comments"></app-commentstack>    
+    <app-commentstack [disabled]="!data.discussable" [parentID]="data.id" [comments]="data.comments"></app-commentstack>    
     </div>
 </div>
