--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,5 +1,5 @@
 <div #holder>
-    <table>
+    <table style="border: 1px black solid;" (mouseover)="toggleReplyButton()" (mouseout)="toggleReplyButton()">
         <tr>
             <td>
                 <p style="margin: 0;padding: 0;">{{data.author}}:</p>
@@ -13,7 +13,8 @@
             <p style="margin: 0;padding: 0;font-size: x-small;display: inline;">{{data.datemade}}</p>
             </td>
         </tr>
-
-</table>
-<app-commentstack [comments]="data.replies" [id]="data.id" [level]="level+1"></app-commentstack>
+        
+    </table>
+    
+<app-commentstack [disabled]="disabled" [comments]="data.replies" [id]="data.id" [level]="level+1" #stack></app-commentstack>
 </div>
